--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 #generateContainer{
-    margin: 20px 20px;
+    margin: 20px 25px;
 }
 .generate {
     width: 100px;
@@ -15,9 +15,10 @@
 }
 
 #results {
-    width: auto;
-    height: 300px;
-    margin: 75px 20px;
+    float:left;
+    width: 90%;
+    height: 300px; /*auto?*/
+    margin: 35px 20px;
     background-color: white;
     border: 2px solid black;
     font-family: monospace;
