--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,11 @@
     float:left;
 }
 
+.groupColumn {
+    float:left;
+    margin: 25px;
+    font-size: 30px;
+}
 .results {
     float:left;
     width: 90%;
