--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,55 @@
-.generateContainer{
-    margin: 20px 25px;
-}
-.generate {
-    width: 100px;
-    height: 50px;
+
+.button {
+    width: 80px;
+    height: 40px;
     background-color: lightgrey;
     border: 2px solid black;
     font-family: monospace;
-    font-size: 40px;
-    text-align:center;
-    line-height: 50px;
+    font-size: 35px;
+    text-align: center;
+    line-height: 40px;
     padding: 10px;
+    /*float:left;*/
+}
+
+.optionsContainer {
+    float: right;
+    margin: 21px 40px 0 0;
+    border: 2px solid orangered;
+    width: 355px;
+}
+
+.numberContainer{
+    margin: 15px 0 0 5px;
+    border: 2px solid cadetblue;
+    width: 326px;
+    height: 209px;
+    padding: 15px 0 0 13px;
+    /*margin: 20px 25px;*/
+}
+
+.container{
+    width: 760px;
+    height: 270px;
+    /*border: 2px solid black;*/
+}
+
+.option {
+    width: 300px;
+    font-size: 25px;
+    margin: 15px;
+}
+
+br {
+    /*line-height: 100px;*/
+}
+
+.generate{
+    width: 200px;
+}
+
+.number {
+    margin: 0px;
     float:left;
 }
 
@@ -19,6 +58,7 @@
     margin: 25px;
     font-size: 30px;
 }
+
 .results {
     float:left;
     width: 90%;
