--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,7 @@
     line-height: 40px;
     padding: 10px;
     font-size: 35px;
+    font-family: monospace;
 }
 
 .optionsContainer {
@@ -60,8 +61,9 @@
 }
 
 .groupColumn {
-    float:left;
+    /*float:left;*/
     margin: 25px;
+    display: inline-block;
     font-size: 30px;
 }
 
