--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,15 +11,8 @@
     font-family: monospace;
 }
 
-.optionsContainer {
-    float: right;
-    margin: 21px 40px 0 0;
-    border: 2px solid orangered;
-    width: 355px;
-}
-
 .numberContainer{
-    margin: 15px 0 0 5px;
+    /*margin: 15px 0 0 5px;*/
     border: 2px solid cadetblue;
     width: 326px;
     height: 230px;
@@ -29,7 +22,7 @@
 
 .sizeContainer{
     float: right;
-    margin: 15px 50px 0 0;
+    /*margin: 15px 50px 0 0;*/
     border: 2px solid orangered;
     width: 326px;
     height: 230px;
@@ -39,7 +32,7 @@
 .container{
     font-family: monospace;
     font-size: 25px;
-    width: 760px;
+    width: 90%;
     height: 270px;
     text-align: center;
 }
@@ -51,8 +44,8 @@
 }
 
 .generate{
-    width: 200px;
-    margin: -30px 0 0 55px;
+    width: 90%;
+    margin: -20px auto;
 }
 
 .number {
@@ -65,6 +58,7 @@
     margin: 25px;
     display: inline-block;
     font-size: 30px;
+    vertical-align: top;
 }
 
 .results {
