--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,12 @@
 
 .button {
-    width: 28%;
-    height: 20%;
+    width: 29%;
+    height: 22%;
     background-color: lightgrey;
     border: 2px solid black;
     text-align: center;
-    /*line-height: 40px;*/
-    vertical-align: middle;
+    line-height: 150%;
     padding: 1.5%;
-/*change to 1% media query under 445px width*/
     font-size: 120%;
     font-family: monospace;
     margin: auto;
@@ -38,7 +36,7 @@
     font-family: monospace;
     font-size: 25px;
     width: 90%;
-    height: 270px;
+    height: auto;
     text-align: center;
     margin: auto;
 }
@@ -47,12 +45,6 @@
     width: 300px;
     font-size: 25px;
     margin: 15px;
-}
-
-.generate{
-    width: 90%;
-    margin: -40px auto;
-    font-size: 250%;
 }
 
 .number {
@@ -100,4 +92,19 @@
     .button {
         padding: 1%;
     }
+}
+
+@media (max-width: 755px) {
+    .button {
+        width: 28%;
+    }
+}
+
+.generate{
+    width: 90%;
+    height: 35px;
+    margin: 15px auto;
+    /*font-size: 250%;*/
+    line-height: 100%;
+    display: inline-block;
 }
