--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,15 +61,18 @@
 }
 
 .results {
-    width: 90%;
+    /*width: 90%;*/
     display: none;
-    margin: 5px 4%;
+    margin: 5px auto;
     background-color: white;
     border: 2px solid black;
     font-family: monospace;
     font-size: 12px;
     text-align: center;
     padding: 10px;
+}
+body {
+    text-align: center;
 }
 
 @media (max-width: 445px) {
